--- a/src/main/webapp/users/home.html
+++ b/src/main/webapp/users/home.html
@@ -3,7 +3,7 @@
     <title>Users</title>
 </head>
 <body>
-<h1>Users</h1>
+<h1>NBA Team Database</h1>
 <ul>
     <li>
         <a href="user-list.html">
