--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -20,6 +20,11 @@
             Fans
         </a>
     </li>
+    <li>
+        <a href="managers/manager-list.html">
+            Managers
+        </a>
+    </li>
 </ul>
 
 </body>
