tickets and games

--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -25,6 +25,16 @@
             Managers
         </a>
     </li>
+    <li>
+        <a href="tickets/ticket-list.html">
+            Tickets
+        </a>
+    </li>
+    <li>
+        <a href="games/game-list.html">
+            Games
+        </a>
+    </li>
 </ul>
 
 </body>
