--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -35,6 +35,11 @@
             Games
         </a>
     </li>
+    <li>
+        <a href="players/player-list.html">
+            Players
+        </a>
+    </li>
 </ul>
 
 </body>
