--- a/src/main/webapp/home.html
+++ b/src/main/webapp/home.html
@@ -40,6 +40,11 @@
             Players
         </a>
     </li>
+    <li>
+        <a href="coaches/coach-list.html">
+            Coaches
+        </a>
+    </li>
 </ul>
 
 </body>
