login page rudimentary

--- a/src/main/webapp/home-manager.html
+++ b/src/main/webapp/home-manager.html
@@ -1,9 +1,8 @@
 <html>
 <head>
-    <title>Users</title>
 </head>
 <body>
-<h1>NBA Team Database</h1>
+<h1>NBA Team Database: Manager View</h1>
 <ul>
     <li>
         <a href="users/user-list.html">
@@ -43,6 +42,12 @@
     <li>
         <a href="coaches/coach-list.html">
             Coaches
+        </a>
+    </li>
+    <br/>
+    <li>
+        <a href="login.html">
+            Login Page
         </a>
     </li>
 </ul>
