--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>NBA Team Database</title>
 </head>
 <body>
 <h1>NBA Team Database</h1>
