--- a/src/main/webapp/home-fan.html
+++ b/src/main/webapp/home-fan.html
@@ -6,42 +6,42 @@
 <h1>NBA Team Database: Fan View</h1>
 <ul>
     <li>
-        <a href="users/user-list.html">
+        <a href="users/user-list-fan.html">
             Users
         </a>
     </li>
     <li>
-        <a href="teams/team-list.html">
+        <a href="teams/team-list-fan.html">
             Teams
         </a>
     </li>
     <li>
-        <a href="fans/fan-list.html">
+        <a href="fans/fan-list-fan.html">
             Fans
         </a>
     </li>
     <li>
-        <a href="managers/manager-list.html">
+        <a href="managers/manager-list-fan.html">
             Managers
         </a>
     </li>
     <li>
-        <a href="tickets/ticket-list.html">
+        <a href="tickets/ticket-list-fan.html">
             Tickets
         </a>
     </li>
     <li>
-        <a href="games/game-list.html">
+        <a href="games/game-list-fan.html">
             Games
         </a>
     </li>
     <li>
-        <a href="players/player-list.html">
+        <a href="players/player-list-fan.html">
             Players
         </a>
     </li>
     <li>
-        <a href="coaches/coach-list.html">
+        <a href="coaches/coach-list-fan.html">
             Coaches
         </a>
     </li>
